Fixed Images Storage & Display

--- a/docker/nginx.conf
+++ b/docker/nginx.conf
@@ -21,4 +21,10 @@ server {
         expires max;
         log_not_found off;
     }
+
+    location /storage/ {
+        root /var/www/public;
+        access_log off;
+        expires max;
+    }
 }
