--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,7 +13,7 @@ services:
     ports:
       - "9000:9000"
     depends_on:
-    #   - laravel_postgres
+      - laravel_postgres
       - laravel_redis
       - laravel_node
     networks:
@@ -28,9 +28,10 @@ services:
       - "8080:80"
     volumes:
       - .:/var/www/html
-      - /var/www/html/storage
+      - /var/www/html/public
       - /var/www/html/bootstrap/cache
-      - ./docker/nginx.conf:/etc/nginx/conf.d/default.confcl
+      - ./storage:/var/www/html/storage
+      - ./docker/nginx.conf:/etc/nginx/conf.d/default.conf
     depends_on:
       - laravel_app
     networks:
