--- a/docker/Dockerfile.nginx
+++ b/docker/Dockerfile.nginx
@@ -3,3 +3,8 @@ FROM nginx:latest
 COPY docker/nginx.conf /etc/nginx/conf.d/default.conf
 
 WORKDIR /var/www/html
+
+RUN chown -R www-data:www-data /var/www/html \
+    && chmod -R 775 storage bootstrap/cache \
+    && chmod -R 777 public
+
